# igan

./: README.md  create_knowledge_graph.py  pyproject.toml
config/: schema_config.yaml
igan/adapters/: clinicaltrials_adapter.py
