[tool.poetry]
name = "biocypher-project-template"
version = "0.1.1"
description = "Clinical trials about IgA nephropathy from clinicaltrials.gov"
authors = [
    "Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biocypher = "^0.5.4"
requests = "^2.31.0"
treelib = "1.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80